Syntax_Analysis/parser.output
Grammar

    0 $accept: program "end of file"

    1 program: header declarations subprograms comp_statement "."

    2 header: "program" "id" ";"
    3       | error "program" "id" ";"
    4       | "program" error "id" ";"
    5       | "program" "id" error ";"

    6 declarations: constdefs typedefs vardefs

    7 constdefs: "const" constant_defs ";"
    8          | "const" constant_defs error
    9          | ε

   10 constant_defs: constant_defs ";" "id" "=" expression
   11              | "id" "=" expression

   12 expression: expression "> or >= or < or <= or <>" expression
   13           | expression "=" expression
   14           | expression "IN" expression
   15           | expression "OR" expression
   16           | expression "+ or -" expression
   17           | expression "* or / or DIV or AND or MOD" expression
   18           | "+ or -" expression
   19           | "NOT" expression
   20           | variable
   21           | "id" "(" expressions ")"
   22           | "length" "(" expression ")"
   23           | "new" "(" expression ")"
   24           | constant
   25           | "(" expression ")"
   26           | "(" expression error
   27           | setlistexpression

   28 variable: "id"
   29         | variable "." "id"
   30         | variable "[" expressions "]"
   31         | "listfunc" "(" expression ")"
   32         | "listfunc" "(" expression error

   33 expressions: expressions "," expression
   34            | expression

   35 constant: "integer constant"
   36         | "real constant"
   37         | "boolean constant"
   38         | "char constant"

   39 setlistexpression: "[" expressions "]"
   40                  | "[" "]"

   41 typedefs: "type" type_defs ";"
   42         | ε

   43 type_defs: type_defs ";" "id" "=" type_def
   44          | "id" "=" type_def

   45 type_def: "array" "[" dims "]" "of" typename
   46         | "array" "[" dims error "of" typename
   47         | "list" "of" typename
   48         | "set" "of" typename

   49 $@1: ε

   50 $@2: ε

   51 type_def: "record" $@1 fields $@2 "end"
   52         | limit ".." limit

   53 dims: dims "," limits
   54     | limits

   55 limits: limit ".." limit
   56       | "id"

   57 limit: sign "integer constant"
   58      | "char constant"
   59      | "boolean constant"
   60      | "+ or -" "id"
   61      | "id"

   62 sign: "+ or -"
   63     | ε

   64 typename: standard_type
   65         | "id"

   66 standard_type: "integer"
   67              | "real"
   68              | "boolean"
   69              | "char"

   70 fields: fields ";" field
   71       | field

   72 field: identifiers ":" typename

   73 identifiers: identifiers "," "id"
   74            | "id"

   75 vardefs: "var" variable_defs ";"
   76        | ε

   77 variable_defs: variable_defs ";" identifiers ":" typename
   78              | identifiers ":" typename

   79 subprograms: subprograms subprogram ";"
   80            | ε

   81 subprogram: sub_header ";" "forward"
   82           | sub_header ";" declarations subprograms comp_statement

   83 sub_header: "function" "id" formal_parameters ":" standard_type
   84           | "function" "id" formal_parameters ":" "list"
   85           | "procedure" "id" formal_parameters
   86           | "function" "id"
   87           | "function" error "id" formal_parameters ":" standard_type
   88           | "function" "id" formal_parameters error ":" standard_type

   89 formal_parameters: "(" parameter_list ")"
   90                  | ε

   91 parameter_list: parameter_list ";" pass identifiers ":" typename
   92               | pass identifiers ":" typename

   93 pass: "var"
   94     | ε

   95 comp_statement: "begin" statements "end"

   96 statements: statements ";" statement
   97           | statement

   98 statement: assignment
   99          | if_statement
  100          | case_statement
  101          | while_statement
  102          | for_statement
  103          | with_statement
  104          | subprogram_call
  105          | io_statement
  106          | comp_statement
  107          | ε

  108 assignment: variable ":=" expression
  109           | variable ":=" "string"

  110 $@3: ε

  111 $@4: ε

  112 if_statement: "if" expression "then" $@3 statement $@4 if_tail

  113 $@5: ε

  114 if_tail: "else" $@5 statement
  115        | ε

  116 case_statement: "case" expression "of" cases case_tail "end"

  117 cases: cases ";" single_case
  118      | single_case

  119 single_case: label_list ":" statement
  120            | ε

  121 label_list: label_list "," label
  122           | label

  123 label: sign constant
  124      | sign "id"

  125 case_tail: ";" "otherwise" ":" statement
  126          | ε

  127 $@6: ε

  128 while_statement: "while" expression "do" $@6 statement

  129 $@7: ε

  130 for_statement: "for" "id" ":=" iter_space "do" $@7 statement

  131 iter_space: expression "to" expression
  132           | expression "downto" expression

  133 $@8: ε

  134 with_statement: "with" variable "do" $@8 statement

  135 subprogram_call: "id"
  136                | "id" "(" expressions ")"

  137 io_statement: "read" "(" read_list ")"
  138             | "write" "(" write_list ")"

  139 read_list: read_list "," read_item
  140          | read_item

  141 read_item: variable

  142 write_list: write_list "," write_item
  143           | write_item

  144 write_item: expression
  145           | "string"


Terminals, with rules where they appear

    "end of file" <strval> (0) 0
    error (256) 3 4 5 8 26 32 46 87 88
    "program" <strval> (258) 2 3 4 5
    "const" <strval> (259) 7 8
    "type" <strval> (260) 41
    "array" <strval> (261) 45 46
    "list" <strval> (262) 47 84
    "set" <strval> (263) 48
    "of" <strval> (264) 45 46 47 48 116
    "record" <strval> (265) 51
    "var" <strval> (266) 75 93
    "function" <strval> (267) 83 84 86 87 88
    "procedure" <strval> (268) 85
    "integer" <strval> (269) 66
    "real" <strval> (270) 67
    "boolean" <strval> (271) 68
    "char" <strval> (272) 69
    "forward" <strval> (273) 81
    "length" <strval> (274) 22
    "new" <strval> (275) 23
    "begin" <strval> (276) 95
    "end" <strval> (277) 51 95 116
    "if" <strval> (278) 112
    "then" <strval> (279) 112
    "else" <strval> (280) 114
    "while" <strval> (281) 128
    "do" <strval> (282) 128 130 134
    "case" <strval> (283) 116
    "otherwise" <strval> (284) 125
    "for" <strval> (285) 130
    "to" <strval> (286) 131
    "downto" <strval> (287) 132
    "with" <strval> (288) 134
    "read" <strval> (289) 137
    "write" <strval> (290) 138
    "id" <strval> (291) 2 3 4 5 10 11 21 28 29 43 44 56 60 61 65 73 74 83 84 85 86 87 88 124 130 135 136
    "string" <strval> (292) 109 145
    "listfunc" <strval> (293) 31 32
    "integer constant" <intval> (294) 35 57
    "real constant" <realval> (295) 36
    "boolean constant" <strval> (296) 37 59
    "char constant" <charval> (297) 38 58
    "> or >= or < or <= or <>" <strval> (298) 12
    "+ or -" <strval> (299) 16 18 60 62
    "OR" <strval> (300) 15
    "* or / or DIV or AND or MOD" <strval> (301) 17
    "NOT" <strval> (302) 19
    "IN" <strval> (303) 14
    "(" <strval> (304) 21 22 23 25 26 31 32 89 136 137 138
    ")" <strval> (305) 21 22 23 25 31 89 136 137 138
    ";" <strval> (306) 2 3 4 5 7 10 41 43 70 75 77 79 81 82 91 96 117 125
    "." <strval> (307) 1 29
    "," <strval> (308) 33 53 73 121 139 142
    "=" <strval> (309) 10 11 13 43 44
    ":" <strval> (310) 72 77 78 83 84 87 88 91 92 119 125
    "[" <strval> (311) 30 39 40 45 46
    "]" <strval> (312) 30 39 40 45
    ":=" <strval> (313) 108 109 130
    ".." <strval> (314) 52 55
    LOWER_THAN_ELSE (315)


Nonterminals, with rules where they appear

    $accept (61)
        on left: 0
    program <strval> (62)
        on left: 1
        on right: 0
    header <strval> (63)
        on left: 2 3 4 5
        on right: 1
    declarations <strval> (64)
        on left: 6
        on right: 1 82
    constdefs <strval> (65)
        on left: 7 8 9
        on right: 6
    constant_defs <strval> (66)
        on left: 10 11
        on right: 7 8 10
    expression <strval> (67)
        on left: 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 10 11 12 13 14 15 16 17 18 19 22 23 25 26 31 32 33 34 108 112 116 128 131 132 144
    variable <strval> (68)
        on left: 28 29 30 31 32
        on right: 20 29 30 108 109 134 141
    expressions <strval> (69)
        on left: 33 34
        on right: 21 30 33 39 136
    constant <strval> (70)
        on left: 35 36 37 38
        on right: 24 123
    setlistexpression <strval> (71)
        on left: 39 40
        on right: 27
    typedefs <strval> (72)
        on left: 41 42
        on right: 6
    type_defs <strval> (73)
        on left: 43 44
        on right: 41 43
    type_def <strval> (74)
        on left: 45 46 47 48 51 52
        on right: 43 44
    $@1 (75)
        on left: 49
        on right: 51
    $@2 (76)
        on left: 50
        on right: 51
    dims <strval> (77)
        on left: 53 54
        on right: 45 46 53
    limits <strval> (78)
        on left: 55 56
        on right: 53 54
    limit <strval> (79)
        on left: 57 58 59 60 61
        on right: 52 55
    sign <strval> (80)
        on left: 62 63
        on right: 57 123 124
    typename <strval> (81)
        on left: 64 65
        on right: 45 46 47 48 72 77 78 91 92
    standard_type <strval> (82)
        on left: 66 67 68 69
        on right: 64 83 87 88
    fields <strval> (83)
        on left: 70 71
        on right: 51 70
    field <strval> (84)
        on left: 72
        on right: 70 71
    identifiers <strval> (85)
        on left: 73 74
        on right: 72 73 77 78 91 92
    vardefs <strval> (86)
        on left: 75 76
        on right: 6
    variable_defs <strval> (87)
        on left: 77 78
        on right: 75 77
    subprograms <strval> (88)
        on left: 79 80
        on right: 1 79 82
    subprogram <strval> (89)
        on left: 81 82
        on right: 79
    sub_header <strval> (90)
        on left: 83 84 85 86 87 88
        on right: 81 82
    formal_parameters <strval> (91)
        on left: 89 90
        on right: 83 84 85 87 88
    parameter_list <strval> (92)
        on left: 91 92
        on right: 89 91
    pass <strval> (93)
        on left: 93 94
        on right: 91 92
    comp_statement <strval> (94)
        on left: 95
        on right: 1 82 106
    statements <strval> (95)
        on left: 96 97
        on right: 95 96
    statement <strval> (96)
        on left: 98 99 100 101 102 103 104 105 106 107
        on right: 96 97 112 114 119 125 128 130 134
    assignment <strval> (97)
        on left: 108 109
        on right: 98
    if_statement <strval> (98)
        on left: 112
        on right: 99
    $@3 (99)
        on left: 110
        on right: 112
    $@4 (100)
        on left: 111
        on right: 112
    if_tail <strval> (101)
        on left: 114 115
        on right: 112
    $@5 (102)
        on left: 113
        on right: 114
    case_statement <strval> (103)
        on left: 116
        on right: 100
    cases <strval> (104)
        on left: 117 118
        on right: 116 117
    single_case <strval> (105)
        on left: 119 120
        on right: 117 118
    label_list <strval> (106)
        on left: 121 122
        on right: 119 121
    label <strval> (107)
        on left: 123 124
        on right: 121 122
    case_tail <strval> (108)
        on left: 125 126
        on right: 116
    while_statement <strval> (109)
        on left: 128
        on right: 101
    $@6 (110)
        on left: 127
        on right: 128
    for_statement <strval> (111)
        on left: 130
        on right: 102
    $@7 (112)
        on left: 129
        on right: 130
    iter_space <strval> (113)
        on left: 131 132
        on right: 130
    with_statement <strval> (114)
        on left: 134
        on right: 103
    $@8 (115)
        on left: 133
        on right: 134
    subprogram_call <strval> (116)
        on left: 135 136
        on right: 104
    io_statement <strval> (117)
        on left: 137 138
        on right: 105
    read_list <strval> (118)
        on left: 139 140
        on right: 137 139
    read_item <strval> (119)
        on left: 141
        on right: 139 140
    write_list <strval> (120)
        on left: 142 143
        on right: 138 142
    write_item <strval> (121)
        on left: 144 145
        on right: 142 143


State 0

    0 $accept: • program "end of file"

    error      shift, and go to state 1
    "program"  shift, and go to state 2

    program  go to state 3
    header   go to state 4


State 1

    3 header: error • "program" "id" ";"

    "program"  shift, and go to state 5


State 2

    2 header: "program" • "id" ";"
    4       | "program" • error "id" ";"
    5       | "program" • "id" error ";"

    error  shift, and go to state 6
    "id"   shift, and go to state 7


State 3

    0 $accept: program • "end of file"

    "end of file"  shift, and go to state 8


State 4

    1 program: header • declarations subprograms comp_statement "."

    "const"  shift, and go to state 9

    $default  reduce using rule 9 (constdefs)

    declarations  go to state 10
    constdefs     go to state 11


State 5

    3 header: error "program" • "id" ";"

    "id"  shift, and go to state 12


State 6

    4 header: "program" error • "id" ";"

    "id"  shift, and go to state 13


State 7

    2 header: "program" "id" • ";"
    5       | "program" "id" • error ";"

    error  shift, and go to state 14
    ";"    shift, and go to state 15


State 8

    0 $accept: program "end of file" •

    $default  accept


State 9

    7 constdefs: "const" • constant_defs ";"
    8          | "const" • constant_defs error

    "id"  shift, and go to state 16

    constant_defs  go to state 17


State 10

    1 program: header declarations • subprograms comp_statement "."

    $default  reduce using rule 80 (subprograms)

    subprograms  go to state 18


State 11

    6 declarations: constdefs • typedefs vardefs

    "type"  shift, and go to state 19

    $default  reduce using rule 42 (typedefs)

    typedefs  go to state 20


State 12

    3 header: error "program" "id" • ";"

    ";"  shift, and go to state 21


State 13

    4 header: "program" error "id" • ";"

    ";"  shift, and go to state 22


State 14

    5 header: "program" "id" error • ";"

    ";"  shift, and go to state 23


State 15

    2 header: "program" "id" ";" •

    $default  reduce using rule 2 (header)


State 16

   11 constant_defs: "id" • "=" expression

    "="  shift, and go to state 24


State 17

    7 constdefs: "const" constant_defs • ";"
    8          | "const" constant_defs • error
   10 constant_defs: constant_defs • ";" "id" "=" expression

    error  shift, and go to state 25
    ";"    shift, and go to state 26


State 18

    1 program: header declarations subprograms • comp_statement "."
   79 subprograms: subprograms • subprogram ";"

    "function"   shift, and go to state 27
    "procedure"  shift, and go to state 28
    "begin"      shift, and go to state 29

    subprogram      go to state 30
    sub_header      go to state 31
    comp_statement  go to state 32


State 19

   41 typedefs: "type" • type_defs ";"

    "id"  shift, and go to state 33

    type_defs  go to state 34


State 20

    6 declarations: constdefs typedefs • vardefs

    "var"  shift, and go to state 35

    $default  reduce using rule 76 (vardefs)

    vardefs  go to state 36


State 21

    3 header: error "program" "id" ";" •

    $default  reduce using rule 3 (header)


State 22

    4 header: "program" error "id" ";" •

    $default  reduce using rule 4 (header)


State 23

    5 header: "program" "id" error ";" •

    $default  reduce using rule 5 (header)


State 24

   11 constant_defs: "id" "=" • expression

    "length"            shift, and go to state 37
    "new"               shift, and go to state 38
    "id"                shift, and go to state 39
    "listfunc"          shift, and go to state 40
    "integer constant"  shift, and go to state 41
    "real constant"     shift, and go to state 42
    "boolean constant"  shift, and go to state 43
    "char constant"     shift, and go to state 44
    "+ or -"            shift, and go to state 45
    "NOT"               shift, and go to state 46
    "("                 shift, and go to state 47
    "["                 shift, and go to state 48

    expression         go to state 49
    variable           go to state 50
    constant           go to state 51
    setlistexpression  go to state 52


State 25

    8 constdefs: "const" constant_defs error •

    $default  reduce using rule 8 (constdefs)


State 26

    7 constdefs: "const" constant_defs ";" •
   10 constant_defs: constant_defs ";" • "id" "=" expression

    "id"  shift, and go to state 53

    $default  reduce using rule 7 (constdefs)


State 27

   83 sub_header: "function" • "id" formal_parameters ":" standard_type
   84           | "function" • "id" formal_parameters ":" "list"
   86           | "function" • "id"
   87           | "function" • error "id" formal_parameters ":" standard_type
   88           | "function" • "id" formal_parameters error ":" standard_type

    error  shift, and go to state 54
    "id"   shift, and go to state 55


State 28

   85 sub_header: "procedure" • "id" formal_parameters

    "id"  shift, and go to state 56


State 29

   95 comp_statement: "begin" • statements "end"

    "begin"     shift, and go to state 29
    "if"        shift, and go to state 57
    "while"     shift, and go to state 58
    "case"      shift, and go to state 59
    "for"       shift, and go to state 60
    "with"      shift, and go to state 61
    "read"      shift, and go to state 62
    "write"     shift, and go to state 63
    "id"        shift, and go to state 64
    "listfunc"  shift, and go to state 40

    $default  reduce using rule 107 (statement)

    variable         go to state 65
    comp_statement   go to state 66
    statements       go to state 67
    statement        go to state 68
    assignment       go to state 69
    if_statement     go to state 70
    case_statement   go to state 71
    while_statement  go to state 72
    for_statement    go to state 73
    with_statement   go to state 74
    subprogram_call  go to state 75
    io_statement     go to state 76


State 30

   79 subprograms: subprograms subprogram • ";"

    ";"  shift, and go to state 77


State 31

   81 subprogram: sub_header • ";" "forward"
   82           | sub_header • ";" declarations subprograms comp_statement

    ";"  shift, and go to state 78


State 32

    1 program: header declarations subprograms comp_statement • "."

    "."  shift, and go to state 79


State 33

   44 type_defs: "id" • "=" type_def

    "="  shift, and go to state 80


State 34

   41 typedefs: "type" type_defs • ";"
   43 type_defs: type_defs • ";" "id" "=" type_def

    ";"  shift, and go to state 81


State 35

   75 vardefs: "var" • variable_defs ";"

    "id"  shift, and go to state 82

    identifiers    go to state 83
    variable_defs  go to state 84


State 36

    6 declarations: constdefs typedefs vardefs •

    $default  reduce using rule 6 (declarations)


State 37

   22 expression: "length" • "(" expression ")"

    "("  shift, and go to state 85


State 38

   23 expression: "new" • "(" expression ")"

    "("  shift, and go to state 86


State 39

   21 expression: "id" • "(" expressions ")"
   28 variable: "id" •

    "("  shift, and go to state 87

    $default  reduce using rule 28 (variable)


State 40

   31 variable: "listfunc" • "(" expression ")"
   32         | "listfunc" • "(" expression error

    "("  shift, and go to state 88


State 41

   35 constant: "integer constant" •

    $default  reduce using rule 35 (constant)


State 42

   36 constant: "real constant" •

    $default  reduce using rule 36 (constant)


State 43

   37 constant: "boolean constant" •

    $default  reduce using rule 37 (constant)


State 44

   38 constant: "char constant" •

    $default  reduce using rule 38 (constant)


State 45

   18 expression: "+ or -" • expression

    "length"            shift, and go to state 37
    "new"               shift, and go to state 38
    "id"                shift, and go to state 39
    "listfunc"          shift, and go to state 40
    "integer constant"  shift, and go to state 41
    "real constant"     shift, and go to state 42
    "boolean constant"  shift, and go to state 43
    "char constant"     shift, and go to state 44
    "+ or -"            shift, and go to state 45
    "NOT"               shift, and go to state 46
    "("                 shift, and go to state 47
    "["                 shift, and go to state 48

    expression         go to state 89
    variable           go to state 50
    constant           go to state 51
    setlistexpression  go to state 52


State 46

   19 expression: "NOT" • expression

    "length"            shift, and go to state 37
    "new"               shift, and go to state 38
    "id"                shift, and go to state 39
    "listfunc"          shift, and go to state 40
    "integer constant"  shift, and go to state 41
    "real constant"     shift, and go to state 42
    "boolean constant"  shift, and go to state 43
    "char constant"     shift, and go to state 44
    "+ or -"            shift, and go to state 45
    "NOT"               shift, and go to state 46
    "("                 shift, and go to state 47
    "["                 shift, and go to state 48

    expression         go to state 90
    variable           go to state 50
    constant           go to state 51
    setlistexpression  go to state 52


State 47

   25 expression: "(" • expression ")"
   26           | "(" • expression error

    "length"            shift, and go to state 37
    "new"               shift, and go to state 38
    "id"                shift, and go to state 39
    "listfunc"          shift, and go to state 40
    "integer constant"  shift, and go to state 41
    "real constant"     shift, and go to state 42
    "boolean constant"  shift, and go to state 43
    "char constant"     shift, and go to state 44
    "+ or -"            shift, and go to state 45
    "NOT"               shift, and go to state 46
    "("                 shift, and go to state 47
    "["                 shift, and go to state 48

    expression         go to state 91
    variable           go to state 50
    constant           go to state 51
    setlistexpression  go to state 52


State 48

   39 setlistexpression: "[" • expressions "]"
   40                  | "[" • "]"

    "length"            shift, and go to state 37
    "new"               shift, and go to state 38
    "id"                shift, and go to state 39
    "listfunc"          shift, and go to state 40
    "integer constant"  shift, and go to state 41
    "real constant"     shift, and go to state 42
    "boolean constant"  shift, and go to state 43
    "char constant"     shift, and go to state 44
    "+ or -"            shift, and go to state 45
    "NOT"               shift, and go to state 46
    "("                 shift, and go to state 47
    "["                 shift, and go to state 48
    "]"                 shift, and go to state 92

    expression         go to state 93
    variable           go to state 50
    expressions        go to state 94
    constant           go to state 51
    setlistexpression  go to state 52


State 49

   11 constant_defs: "id" "=" expression •
   12 expression: expression • "> or >= or < or <= or <>" expression
   13           | expression • "=" expression
   14           | expression • "IN" expression
   15           | expression • "OR" expression
   16           | expression • "+ or -" expression
   17           | expression • "* or / or DIV or AND or MOD" expression

    "> or >= or < or <= or <>"     shift, and go to state 95
    "+ or -"                       shift, and go to state 96
    "OR"                           shift, and go to state 97
    "* or / or DIV or AND or MOD"  shift, and go to state 98
    "IN"                           shift, and go to state 99
    "="                            shift, and go to state 100

    $default  reduce using rule 11 (constant_defs)


State 50
